k8s/driver-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
      - name: driver-service
        image: adedolapo05/driver-service:26
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: driver-service
spec:
  selector:
    app: driver-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 8080
