k8s/tracking-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tracking-service
  template:
    metadata:
      labels:
        app: tracking-service
    spec:
      containers:
      - name: tracking-service
        image: adedolapo05/tracking-service:26
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tracking-service
spec:
  selector:
    app: tracking-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 8080
